MCA App/Release/MCA Dev Org/src/objects/Assignment_Rule_Entry__c.object
<CustomObject>
    <description>The Assignment Rule Entry object handles the assignment and reassignment of leads.</description>
    <fields>
        <fullName>Assignment_Rule__c</fullName>
        <label>Assignment Rule</label>
        <referenceTo>Assignment_Rule__c</referenceTo>
        <relationshipLabel>Assignment Rule Entry</relationshipLabel>
        <relationshipName>Assignment_Rule_Entry</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_API__c</fullName>
        <label>Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API__c</fullName>
        <label>Object API</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scorecard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Assignment Rule Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Rule Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Rule Entry</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>